tests/sumo/extended/vaporizer/errors/end_not_numeric/errors.sumo
Warning: Vaporizers are deprecated. Use rerouters instead.
Error: Attribute 'end' in definition of a vaporizer is not a time value.
Quitting (on error).
